# valiant

./: .envrc  .gitignore  CNAME  README.md  README.org  flake.nix  lib.nix  pyproject.toml  setup.py  shell.nix  test.py  titan.json
patches/rich/: __init__.patch  _inspect.patch
tests/: conftest.py  test_Opts.py  test_collectDirs.py  test_functions.py  test_path.py  test_sh.py
thanos/: __init__.py
titan/: __init__.py
valiant/: __init__.py  confirm.py  gauntlet.py  miscellaneous.py  opts.py  path.py  sh.py  shell.py
valiant/resources/: valiant.bzl  valiant.cue  valiant.dhall  valiant.hujson  valiant.json  valiant.jsonnet  valiant.ncl  valiant.nix  valiant.pickle  valiant.py  valiant.toml  valiant.xml  valiant.yml  valiant1.xml  valiant2.xml  vflake.nix
valiant/resources/directory_templates/: valiant.py
valiant/resources/directory_templates/bzl/: valiant.bzl
valiant/resources/directory_templates/cue/: valiant.cue
valiant/resources/directory_templates/dhall/: valiant.dhall
valiant/resources/directory_templates/hujson/: valiant.hujson
valiant/resources/directory_templates/json/: valiant.json
valiant/resources/directory_templates/jsonnet/: valiant.jsonnet
valiant/resources/directory_templates/ncl/: valiant.ncl
valiant/resources/directory_templates/nix/: valiant.nix
valiant/resources/directory_templates/py/: valiant.py
valiant/resources/directory_templates/toml/: valiant.toml
valiant/resources/directory_templates/vflake/: vflake.nix
valiant/resources/directory_templates/xml/: valiant.xml
valiant/resources/directory_templates/yaml/: valiant.yaml
valiant/resources/directory_templates/yml/: valiant.yml
valiant/resources/lib/lib/: asserts.nix  attrsets.nix  customisation.nix  debug.nix  default.nix  deprecated.nix  derivations.nix  filesystem.nix  fixed-points.nix  flakes.nix  generators.nix  kernel.nix  licenses.nix  lists.nix  meta.nix  modules.nix  options.nix  source-types.nix  sources.nix  strings.nix  trivial.nix  types.nix  versions.nix  zip-int-bits.nix
valiant/resources/lib/lib/path/: default.nix
valiant/resources/lib/lib/systems/: architectures.nix  default.nix  doubles.nix  examples.nix  inspect.nix  parse.nix  platforms.nix  supported.nix
valiant/resources/lib/lib/tests/: misc.nix  (+5 more)
(+8 files in other folders)
