[tool.poetry]
name = "titan"
version = "1.0.0.0"
description = "Fine. I'll do it myself."
authors = ["sylvorg <jeet.ray@syvl.org>"]
license = "OREO"
include = [ "titan/**/*.py", ]

[tool.poetry.dependencies]
python = "^3.10"
addict = "*"
click = "*"
rich = "*"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
poetry = "*"
poetry2setup = "*"
pytest-hy = "*"
pytest-randomly = "*"
pytest-parametrized = "*"
pytest-sugar = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
